# union_back

./: .env  Cargo.toml  README.md  sample_api.txt
.sqlx/: query-6c02c575696801f4caeea3af1a5dd4d9f0a236eacaf08fe31f0cf46e51170fca.json  query-d5c277f4b9d0a82dd66969604f2513c6898fa6f523e4d0ca08e1674832e1d4a3.json
migrations/: 20240101000000_create_news.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/db/: news.rs
src/errors/: api_error.rs
src/models/: news.rs
src/routes/: mod.rs  news.rs
