[package]
name = "union_back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
hyper = { version = "1.6.0", features = ["server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio-native-tls", "time"] }
time = "0.3.39"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
